--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="play_learn"><![CDATA[Play & Learn]]></string>
     <string name="subtitle">Want to see how well \n you fare against our \n questions?</string>
     <string name="test_me">Test Me</string>
+    <string name="start_game">START GAME</string>
+    <string name="past_results">Past Results</string>
+    <string name="number_of_questions">Number of questions</string>
+    <string name="select_category">Select category</string>
+    <string name="select_difficulty">Select difficulty</string>
 </resources>
