--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="number_of_questions">Number of questions</string>
     <string name="select_category">Select category</string>
     <string name="select_difficulty">Select difficulty</string>
+    <string name="question">Question</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
